Added link to GitHub repo.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  <div class="download">
 	    <a id="dl-shortcut"></a>
             <a href="files/TrackIt_2.0.4.jar" onclick="javascript: _gaq.push(['_trackPageview', '/downloads/TrackIt_2.0.4']);" class="btn">Download v2.0.4</a>
-	    <span>and make sure you have <a href="http://www.java.com/en/download/">Java</a>!</span>
+	    <span>and make sure you have <a href="http://www.java.com/en/download/">Java</a>!  <em>Source code available at <a href="https://github.com/JohnDickerson/TrackIt">GitHub</a>.</em></span>
 	  </div>
 	</div>
 
@@ -181,7 +181,7 @@
 		<a href="files/TrackIt_2.0.4.jar" onclick="javascript: _gaq.push(['_trackPageview', '/downloads/TrackIt_2.0.4']);" class="btn">Download v2.0.4</a>
 	      </div>
 	    </div>
-	    <p>Download this if you want the newest, most feature-filled Track-It.  Users starting their own research paths or replicating newer results will want to use this version.</p>
+	    <p>Download this if you want the newest, most feature-filled <em>tested version</em> of Track-It.  Users starting their own research paths or replicating newer results will want to use this version.</p>
 	  </div>
 	  
 	  <!-- Right-hand side for old .jars and the Flash .exe -->
@@ -194,6 +194,11 @@
 	      </div>
 	    </div>
 	    <p>Download this if you wish to replicate past results.  This version lacks several features found in the newer Track-Its and comes <span>as-is</span> with no plans for modifications and no support.</p>
+	  </div>
+
+	  <div class="fullcol">
+	    <h3>Source Code &amp; Contributing</h3>
+	    <p>The complete source code for this project is available at <a href="https://github.com/JohnDickerson/TrackIt">GitHub</a>.  You should be able to clone the repository and import the Track-It project directly into <a href="http://www.eclipse.org/">Eclipse</a>.  Note that what's available in the repository may be untested (since it is the absolute newest version of the code), so if you're just interested in <em>using</em> Track-It, stick to the download methods above.  Forks and pulls are definitely welcome!</p>
 	  </div>
 	</div>
       </div>
